BK-#0- Fixing some styles that didn't look good on mobile, and also I encountered an error with description text too big - added some code to handle that situation.

--- a/web_container/apache-tomcat-8.0.14/webapps/ROOT/advanced_search.css
+++ b/web_container/apache-tomcat-8.0.14/webapps/ROOT/advanced_search.css
@@ -31,7 +31,6 @@ form[action="advanced_search.jsp"] div.form-row label{
 
 form[action="advanced_search.jsp"] input[type="text"] {
   display: table-cell;
-  width: 300px;
   background: 12px 11px no-repeat, linear-gradient(to bottom, #f7f7f8 0%,#ffffff 100%);
   border-radius: 3px;
   border: 1px solid grey;
